# pydpeet

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-pages.yml
benchmarks/: README.md
docs/: build_docs.py  conf.py  developer.md  generate_api.py  index.md  installation.md  quickstart.md
docs/api/: index.md  index.rst  modules.md
docs/examples/: index.md
docs/examples/Temp/Analyze/: benchmark.py  evaluation_BA.py  example_ageing_analysis.py
docs/examples/Temp/Sequence/: 1) import + primitives.py  3) import + primitives + correction.py  4) 1) + segments_and_sequences + filter.py  Example_usage.py
docs/examples/notebooks/: Test.ipynb  Tutoral1.ipynb  Tutorial_00_Introduction.ipynb  Tutorial_01_Convert_Import.ipynb  Tutorial_02_Merge.ipynb  Tutorial_03_Sequence.ipynb  Tutorial_04_OCV.ipynb  Tutorial_04_OCV_FUDS.ipynb  Tutorial_04_iOCV.ipynb  Tutorial_05_SOC.ipynb  Tutorial_06_SOH_C.ipynb  Tutorial_07_SOH_R.ipynb  index.md  index.rst
docs/examples/research/2026_KWB/: Usage_Example.ipynb  plot_helper.py
docs/examples/scripts/: Convert.py  Test1.py
docs/examples/scripts/Sequence/: 2) import bigger file + primitives.py  5) 1) + generate instructions + simulation.py
docs/source/: conf.py  index.rst  modules.rst  ppb.configs.rst  ppb.rst  ppb.utils.rst  ppb.zyklisierer.arbin.rst  ppb.zyklisierer.arbin_old.rst  ppb.zyklisierer.basytec.rst  ppb.zyklisierer.digatron.rst  ppb.zyklisierer.digatron_eis.rst  ppb.zyklisierer.neware.rst  ppb.zyklisierer.parstat.rst  ppb.zyklisierer.rst  ppb.zyklisierer.safion.rst  ppb.zyklisierer.zahner.rst  ppb.zyklisierer.zahner_new.rst
paper/: PyDPEET Paper Stichpunkte.md
resources/replace_empty_with_none/custom/: formatter.py
src/: __init__.py
src/PyDPEET.egg-info/: PKG-INFO
src/ppb/: benchmark.py  convert.py  directory_standardization.py  export.py  map.py
src/ppb/configs/: config.py
src/ppb/utils/: formatter_utils.py  load_custom_module.py
src/ppb/zyklisierer/arbin/: formatter.py  mapper.py  reader.py
src/ppb/zyklisierer/arbin_old/: formatter.py  reader.py
src/ppb/zyklisierer/basytec/: formatter.py
src/ppb/zyklisierer/digatron/: formatter.py  mapper.py  reader.py
src/ppb/zyklisierer/digatron_eis/: formatter.py  reader.py
src/ppb/zyklisierer/neware/: formatter.py  mapper.py  reader.py
src/ppb/zyklisierer/parstat/: formatter.py  mapper.py  reader.py
src/ppb/zyklisierer/safion/: formatter.py  reader.py
src/ppb/zyklisierer/zahner/: formatter.py  reader.py
src/ppb/zyklisierer/zahner_new/: formatter.py  mapper.py
src/pydpeet/: __init__.py
src/pydpeet/citations/: CITATIONS.bib  __init__.py  citations.json  citeme.py  html_writer.py
src/pydpeet/convert/: __init__.py  benchmark.py  convert.py  directory_standardization.py  export.py  map.py
src/pydpeet/convert/configs/: config.py
src/pydpeet/dev_utils/: __init__.py
src/pydpeet/io/: __init__.py  convert.py  map.py  read.py  write.py
src/pydpeet/process/: __init__.py
src/pydpeet/res/: __init__.py  precompile_dummy_data.parquet
src/pydpeet/utils/: __init__.py  assert_raises_and_print.py  guardrails.py  logging_style.py
test/: test_datatypes.py  test_export.py  test_map.py  utils.py
test/api_accessible/: test_SocMethod.py  test_add_capacity.py  test_add_primitive_segments.py  test_add_resistance_internal.py  test_add_soc.py  test_convert.py  test_df_primitives_correction.py  test_extract_ocv_iocv.py  test_extract_sequence_overview.py  test_filter_and_split_df_by_blocks.py  test_generate_instructions.py  test_mapping.py  test_merge_into_series.py  test_read.py  test_set_logging_style.py  test_visualize_phases.py  test_write.py  test_write_to_bibtex.py
test/arbin/: test_reader.py
test/arbin_old/: test_reader.py
test/basytec/: test_reader.py
test/convert/: test__add_metadata_to_dataframe.py  test__column_mapping.py  test__convert_file_to_pandas_data_frame.py  test__drop_additional_data.py  test__get_data_into_format.py  test__rename_duplicate_extra_columns.py  test__reoorder_columns.py
test/coverage/: test_coverage_files.py
test/digatron/: test_reader.py
test/formatter_utils/: test__time_to_seconds.py  test_absolute_time_timedate_typecast.py  test_apply_convert_to_float_if_possible.py  test_fix_time_format.py  test_move_strings_from_column_to_metadata.py  test_nan_to_none_in_column.py  test_replace_empty_with_none_in_standard_columns.py  test_round_testtime.py  test_testtime_hours_to_seconds_direct.py  test_testtime_hours_to_seconds_with_string_interpretation.py  test_typecast.py
test/internal/: test__add_metadata_to_dataframe.py  test__add_segment_lengths.py  test__analyze_segments.py  test__annotate_id.py  test__annotate_primitives.py  test__annotate_variable.py  test__assign_longest_sequence.py  test__assign_segments_with_fit.py  test__attempt_to_merge_neighboring_segments.py  test__check_CV_0Aend_segments.py  test__check_columns.py  test__check_power_zero_watt_segments.py  test__check_zero_length_segments.py  test__column_mapping.py  test__compute_new_ids.py  test__compute_segment_id.py  test__compute_segment_lengths_numba.py  test__compute_soc_multi_methods_out.py  test__convert_file_to_pandas_data_frame.py  test__convert_to_float_if_possible.py  test__convert_to_hours_to_seconds_direct_if_possible.py  test__do_export.py  test__drop_additional_data.py  test__extract_meta_data.py  test__find_children.py  test__find_zero_segments.py  test__get_data_into_format.py  test__get_id_tol_range.py  test__get_important_entries_per_segment.py  test__get_step_mask.py  test__guardrail_boolean.py  test__guardrail_dataframe.py  test__guardrail_float.py  test__guardrail_int.py  test__handle_cycle_step_test.py  test__handle_failure.py  test__handle_final.py  test__handle_record_auxvol_auxtemp.py  test__handle_test.py  test__keep_max_segment_id.py  (+22 more)
test/neware/: test_directory_standardization.py
test/parstat/: test_reader.py
test/safion/: test_reader.py
test/style_tests/: Bool  DataFrame  Float
test/zahner/: test_reader.py
(+445 files in other folders)
