[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDPEET"
version = "0.2.0"
description = "Python package to read, unify, and convert battery measurement data from arbitrary battery cyclers to Parquet files. This package also provides functions to process, evaluate, and visualise the standardised data."
authors = [
    { name = "Anton Schlösser", email = "a.schloesser@tu-berlin.de"},
    { name = "Martin Otto", email = "m.otto.1@tu-berlin.de"},
    { name = "Alexander Günter Hinrichsen" },
    { name = "Jan Kalisch" },
    { name = "Daniel Schröder" },
    { name = "Cataldo De Simone" },
]
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "python-calamine",
    "numba",
    "matplotlib",
    "scipy",
    "bibtexparser",
    "scikit-learn"
]
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "bibtexparser",
]


[tool.ruff]
# Set line length limit to a slightly higher value
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501: Ignore line length limit
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
 # Use this option to keep lists and parameters lists as multi-line code when ended by a trailing comma
skip-magic-trailing-comma = false