[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDPEET"
version = "0.1.0"
description = "This project enables you to convert battery measurement data to a standardized format and process it for further analysis."
authors = [
    { name = "Anton Schlösser", email = "a.schloesser@tu-berlin.de"},
    { name = "Martin Otto", email = "m.otto.1@tu-berlin.de"},
    { name = "Alexander Günter Hinrichsen" },
    { name = "Jan Kalisch" },
    { name = "Daniel Schröder" },
    { name = "Cataldo De Simone" },
]
dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.4",
    "pyarrow==19.0.1",
    "python-calamine==0.3.1",
    "numba==0.64.0",
    "matplotlib==3.10.8",
    "scipy==1.17.1",
    "bibtexparser==1.4.4",
    "scikit-learn==1.8.0"
]
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "bibtexparser",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-rerunfailures"
]


[tool.ruff]
# Set line length limit to a slightly higher value
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501: Ignore line length limit
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
 # Use this option to keep lists and parameters lists as multi-line code when ended by a trailing comma
skip-magic-trailing-comma = false

# for local testing of test coverage
[tool.coverage.run]
source = ["src/pydpeet"]
omit = [
    "*/dev_utils/*",
    "*/res/*",
]